# cpp_courses

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
000_epfl_introduction_to_programming/: CMakeLists.txt
000_epfl_introduction_to_programming/001_hello_world/: main.cpp
000_epfl_introduction_to_programming/011_polynomial/: main.cpp
000_epfl_introduction_to_programming/012_expr/: main.cpp
000_epfl_introduction_to_programming/013_bike/: main.cpp
000_epfl_introduction_to_programming/019_bounces_2/: main.cpp
000_epfl_introduction_to_programming/021_bank_loan/: main.cpp
000_epfl_introduction_to_programming/027_mastermind/: main.cpp
000_epfl_introduction_to_programming/031_jules_crypto/: main.cpp
000_epfl_introduction_to_programming/036_unicode/: main.cpp
000_initiation_programmation/: CMakeLists.txt  README.md
000_initiation_programmation/007_recipe/: main.cpp
000_initiation_programmation/016_find_number/: main.cpp
000_initiation_programmation/018_bounces/: main.cpp
000_initiation_programmation/022_triangle/: main.cpp
000_initiation_programmation/023_number_game/: main.cpp
000_initiation_programmation/030_structs/: main.cpp
000_initiation_programmation/033_fence_the_property/: main.cpp
000_initiation_programmation/034_pointers/: main.cpp
000_initiation_programmation/035_lambda_expr/: main.cpp
000_initiation_programmation_cpp/: CMakeLists.txt  README.md
000_initiation_programmation_cpp/000_cpp11_test/: main.cpp
000_initiation_programmation_cpp/002_variables/: main.cpp
000_initiation_programmation_cpp/003_read_input/: main.cpp
000_initiation_programmation_cpp/004_expr/: main.cpp
000_initiation_programmation_cpp/005_bmi/: main.cpp
000_initiation_programmation_cpp/006_captain_age/: main.cpp
000_initiation_programmation_cpp/007_recipe/: main.cpp
000_initiation_programmation_cpp/008_limits/: main.cpp
000_initiation_programmation_cpp/009_swap/: main.cpp
000_initiation_programmation_cpp/010_if_else/: main.cpp
000_initiation_programmation_cpp/013_bike/: main.cpp
000_initiation_programmation_cpp/014_mushrooms/: main.cpp
000_initiation_programmation_cpp/015_note_average/: main.cpp
000_initiation_programmation_cpp/017_scope/: main.cpp
000_initiation_programmation_cpp/018_bounce/: main.cpp
000_initiation_programmation_cpp/018_bounces/: main.cpp
000_initiation_programmation_cpp/020_is_prime/: main.cpp
000_initiation_programmation_cpp/022_triangle/: main.cpp
000_initiation_programmation_cpp/023_number_game/: main.cpp
000_initiation_programmation_cpp/024_rabbits_and_foxes/: main.cpp
000_initiation_programmation_cpp/025_read_and_say/: main.cpp
000_initiation_programmation_cpp/026_paques/: main.cpp
000_initiation_programmation_cpp/027_mastermind/: main.cpp
000_initiation_programmation_cpp/028_arrays/: main.cpp
000_initiation_programmation_cpp/029_strings/: main.cpp
000_initiation_programmation_cpp/032_consecutive_sum/: main.cpp
000_initiation_programmation_cpp/033_fence_the_property/: main.cpp
000_initiation_programmation_cpp/034_pointers/: main.cpp
001_opencv_experimentations/: CMakeLists.txt  README.md
001_opencv_experimentations/000_hello_world/: main.cpp
001_opencv_experiments/: CMakeLists.txt  README.md
001_opencv_experiments/000_hello_world/: main.cpp
001_opencv_experiments/001_capture_frame/: main.cpp
001_opencv_experiments/002_processings/: main.cpp
001_opencv_experiments/002_rgb2gray/: main.cpp
002_boost_experiments/: CMakeLists.txt  README.md
002_boost_experiments/000_hello_world/: main.cpp
003_vrac/: CMakeLists.txt
003_vrac/001_chrono/: main.cpp
003_vrac/002_date/: main.cpp
003_vrac/003_arg_parser/: main.cpp
003_zeste_savoir/: CMakeLists.txt
003_zeste_savoir/000_cin/: main.cpp
