cmake_minimum_required(VERSION 3.17)
project(cpp_courses)

set(CMAKE_CXX_STANDARD 11)

# Change this to compile
add_executable(000_cpp_17_test 000_initiation_programmation_cpp/000_cpp17_test/main.cpp)
add_executable(001_hello_world 000_initiation_programmation_cpp/001_hello_world/main.cpp)
add_executable(002_variables 000_initiation_programmation_cpp/002_variables/main.cpp)
add_executable(003_read_input 000_initiation_programmation_cpp/003_read_input/main.cpp)
add_executable(004_expr 000_initiation_programmation_cpp/004_expr/main.cpp)
add_executable(005_imc 000_initiation_programmation_cpp/005_bmi/main.cpp)
add_executable(006_captain_age 000_initiation_programmation_cpp/006_captain_age/main.cpp)
add_executable(007_recipe 000_initiation_programmation_cpp/007_recipe/main.cpp)
add_executable(008_limits 000_initiation_programmation_cpp/008_limits/main.cpp)
add_executable(009_swap 000_initiation_programmation_cpp/009_swap/main.cpp)
add_executable(010_if_else 000_initiation_programmation_cpp/010_if_else/main.cpp)
add_executable(011_polynomial 000_initiation_programmation_cpp/011_polynomial/main.cpp)
add_executable(012_expr 000_initiation_programmation_cpp/012_expr/main.cpp)
add_executable(013_bike 000_initiation_programmation_cpp/013_bike/main.cpp)
add_executable(014_mushrooms 000_initiation_programmation_cpp/014_mushrooms/main.cpp)
add_executable(015_note_average 000_initiation_programmation_cpp/015_note_average/main.cpp)
add_executable(016_find_number 000_initiation_programmation_cpp/016_find_number/main.cpp)
add_executable(017_scope 000_initiation_programmation_cpp/017_scope/main.cpp)
add_executable(018_bounces 000_initiation_programmation_cpp/018_bounces/main.cpp)
add_executable(019_bounces_2 000_initiation_programmation_cpp/019_bounces_2/main.cpp)
add_executable(020_is_prime 000_initiation_programmation_cpp/020_is_prime/main.cpp)
add_executable(021_bank_loan 000_initiation_programmation_cpp/021_bank_loan/main.cpp)
add_executable(022_triangle 000_initiation_programmation_cpp/022_triangle/main.cpp)
add_executable(023_number_game 000_initiation_programmation_cpp/023_number_game/main.cpp)
add_executable(024_rabbits_and_foxes 000_initiation_programmation_cpp/024_rabbits_and_foxes/main.cpp)
add_executable(025_read_and_say 000_initiation_programmation_cpp/025_read_and_say/main.cpp)
add_executable(026_paques 000_initiation_programmation_cpp/026_paques/main.cpp)
add_executable(027_mastermind 000_initiation_programmation_cpp/027_mastermind/main.cpp)
add_executable(028_vectors 000_initiation_programmation_cpp/028_vectors/main.cpp)
add_executable(029_strings 000_initiation_programmation_cpp/029_strings/main.cpp)
