message("-- Add EPFL C++ course")

add_executable(000_000_cpp_17_test 000_cpp17_test/main.cpp)
add_executable(000_001_hello_world 001_hello_world/main.cpp)
add_executable(000_002_variables 002_variables/main.cpp)
add_executable(000_003_read_input 003_read_input/main.cpp)
add_executable(000_004_expr 004_expr/main.cpp)
add_executable(000_005_imc 005_bmi/main.cpp)
add_executable(000_006_captain_age 006_captain_age/main.cpp)
add_executable(000_007_recipe 007_recipe/main.cpp)
add_executable(000_008_limits 008_limits/main.cpp)
add_executable(000_009_swap 009_swap/main.cpp)
add_executable(000_010_if_else 010_if_else/main.cpp)
add_executable(000_011_polynomial 011_polynomial/main.cpp)
add_executable(000_012_expr 012_expr/main.cpp)
add_executable(000_013_bike 013_bike/main.cpp)
add_executable(000_014_mushrooms 014_mushrooms/main.cpp)
add_executable(000_015_note_average 015_note_average/main.cpp)
add_executable(000_016_find_number 016_find_number/main.cpp)
add_executable(000_017_scope 017_scope/main.cpp)
add_executable(000_018_bounces 018_bounces/main.cpp)
add_executable(000_019_bounces_2 019_bounces_2/main.cpp)
add_executable(000_020_is_prime 020_is_prime/main.cpp)
add_executable(000_021_bank_loan 021_bank_loan/main.cpp)
add_executable(000_022_triangle 022_triangle/main.cpp)
add_executable(000_023_number_game 023_number_game/main.cpp)
add_executable(000_024_rabbits_and_foxes 024_rabbits_and_foxes/main.cpp)
add_executable(000_025_read_and_say 025_read_and_say/main.cpp)
add_executable(000_026_paques 026_paques/main.cpp)
add_executable(000_027_mastermind 027_mastermind/main.cpp)
add_executable(000_028_vectors 028_vectors/main.cpp)
add_executable(000_029_strings 029_strings/main.cpp)
add_executable(000_030_structs 030_structs/main.cpp)
add_executable(000_031_jules_crypto 031_jules_crypto/main.cpp)
add_executable(000_032_consecutive_sum 032_consecutive_sum/main.cpp)
add_executable(000_033_fence_the_property 033_fence_the_property/main.cpp)
add_executable(000_034_pointers 034_pointers/main.cpp)
add_executable(000_035_lambda_expr 035_lambda_expr/main.cpp)
add_executable(000_036_unicode 036_unicode/main.cpp)

