# Change this to compile
add_executable(000_cpp_17_test 000_cpp17_test/main.cpp)
add_executable(001_hello_world 001_hello_world/main.cpp)
add_executable(002_variables 002_variables/main.cpp)
add_executable(003_read_input 003_read_input/main.cpp)
add_executable(004_expr 004_expr/main.cpp)
add_executable(005_imc 005_bmi/main.cpp)
add_executable(006_captain_age 006_captain_age/main.cpp)
add_executable(007_recipe 007_recipe/main.cpp)
add_executable(008_limits 008_limits/main.cpp)
add_executable(009_swap 009_swap/main.cpp)
add_executable(010_if_else 010_if_else/main.cpp)
add_executable(011_polynomial 011_polynomial/main.cpp)
add_executable(012_expr 012_expr/main.cpp)
add_executable(013_bike 013_bike/main.cpp)
add_executable(014_mushrooms 014_mushrooms/main.cpp)
add_executable(015_note_average 015_note_average/main.cpp)
add_executable(016_find_number 016_find_number/main.cpp)
add_executable(017_scope 017_scope/main.cpp)
add_executable(018_bounces 018_bounces/main.cpp)
add_executable(019_bounces_2 019_bounces_2/main.cpp)
add_executable(020_is_prime 020_is_prime/main.cpp)
add_executable(021_bank_loan 021_bank_loan/main.cpp)
add_executable(022_triangle 022_triangle/main.cpp)
add_executable(023_number_game 023_number_game/main.cpp)
add_executable(024_rabbits_and_foxes 024_rabbits_and_foxes/main.cpp)
add_executable(025_read_and_say 025_read_and_say/main.cpp)
add_executable(026_paques 026_paques/main.cpp)
add_executable(027_mastermind 027_mastermind/main.cpp)
add_executable(028_vectors 028_vectors/main.cpp)
add_executable(029_strings 029_strings/main.cpp)
add_executable(030_structs 030_structs/main.cpp)
add_executable(031_jules_crypto 031_jules_crypto/main.cpp)
add_executable(032_consecutive_sum 032_consecutive_sum/main.cpp)
add_executable(033_fence_the_property 033_fence_the_property/main.cpp)
add_executable(034_pointers 034_pointers/main.cpp)
